style: light prettier that wasn't displaying earlir
